--- a/install
+++ b/install
@@ -4,7 +4,7 @@ cd "$(dirname "$0")"
 
 sudo dpkg --add-architecture i386
 sudo apt-get update
-sudo apt-get install -y libmagic-dev python3 python3-dev python3-venv libc6:i386 gcc-multilib g++-multilib git libssl-dev libffi-dev build-essential curl
+sudo apt-get install -y libmagic-dev python3 python3-dev python3-venv libc6:i386 libc6-dev:i386 gcc-multilib g++-multilib git libssl-dev libffi-dev build-essential curl
 
 curl -sSL https://bootstrap.pypa.io/get-pip.py | python3 -
 python3 -m pip install -r requirements.txt
